--- a/css/main.css
+++ b/css/main.css
@@ -18,14 +18,13 @@ body {
   font-size: 12px;
   line-height: 1.5;
   font-weight: 100;
-  background-color: #fdfdfd;
 }
 
 h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: 200; }
 
-a         { color: #2a7ae2; text-decoration: none; }
+a         { color: #1a4aa2; text-decoration: none; }
 a:hover   { color: #000; text-decoration: underline; }
-a:visited { color: #205caa; }
+a:visited { color: #102c6a; }
 
 /* Utility */
 
@@ -143,7 +142,13 @@ font-family: "Roboto Slab";
 
 .page-content {
   padding: 30px 0;
-  background-color: #fff;
+  background-image: url("/assets/setting.jpg");
+  background-size: cover;
+  height:700px;
+}
+
+.page-content a:hover{
+  color:#000;
 }
 
 
