--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,8 @@ a:visited { color: #102c6a; }
   border-top: 5px solid #333;
   border-bottom: 1px solid #e8e8e8;
   min-height: 56px;
-  background-color: white;
+  background-color: black;
+  color:white;
 font-family: "Roboto Slab";
 }
 
@@ -56,7 +57,7 @@ font-family: "Roboto Slab";
 .site-title:hover,
 .site-title:visited {
   display: block;
-  color: #333;
+  color: white;
   font-size: 30px;
   letter-spacing: -1px;
   float: left;
@@ -74,7 +75,7 @@ font-family: "Roboto Slab";
 
 .site-nav .page-link {
   margin-left: 20px;
-  color: #727272;
+  color: #ddd;
 	font-size:16px;
 }
 
@@ -141,7 +142,7 @@ font-family: "Roboto Slab";
 /* ----------------------------------------------------------*/
 
 .page-content {
-  padding: 30px 0;
+  padding: 70px 0;
   background-image: url("/assets/setting.jpg");
   background-size: cover;
   height:700px;
