--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img id="prof-img" class="img-responsive" src="img/mountain.jpg" alt="">
+                    <!--<img id="prof-img" class="img-responsive" src="img/blacknwhitecandid.jpg" alt="">-->
                     <div class="intro-text">
                         <!-- <span class="name">{{ site.title }}</span> -->
-                        <hr class="star-light">
-                        <span class="skills">Data Scientist - Web Developer - Entrepreneur - Explorer</span>
+                        <!--<hr class="star-light">-->
                     </div>
                 </div>
             </div>
