--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -84,7 +84,7 @@ hr.star-primary:after {
 }
 
 header {
-    margin-top:50px;
+    margin-top:6rem;
     text-align: center;
     color: #fff;
     background: url("/img/blacknwhitecandid.jpg");
@@ -135,14 +135,14 @@ header .intro-text .skills {
 
 @media(min-width:768px) {
     .navbar-fixed-top {
-        padding: 25px 0;
+        padding: 10px 0;
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
         transition: padding .3s;
     }
 
     .navbar-fixed-top .navbar-brand {
-        font-size: 2em;
+        font-size: 1.5em;
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
         transition: all .3s;
@@ -182,6 +182,20 @@ header .intro-text .skills {
 
 .navbar{
   background:#1f1f1f;
+}
+
+.quote{
+  font-size:2rem;
+  color:black;
+  width:300px;
+  position:absolute;
+  top:-85px;
+  right:0px;
+  height:370px;
+  text-align:left;
+  background:rgba(240,240,240,0.4);
+  padding:30px;
+  border-radius:20px;
 }
 
 section {
