deleted quote on website

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,10 +7,10 @@
                     <div class="intro-text">
                         <!-- <span class="name">{{ site.title }}</span> -->
                         <!--<hr class="star-light">-->
-                        <span class="quote">
+                        <!--<span class="quote">
                           The individual has always had to struggle to keep from being overwhelmed by the tribe. If you try it, you will be lonely often, and sometimes frightened. But no price is too high to pay for the privilege of owning yourself.
 <br><br>― Friedrich Nietzsche
-                        </span>
+                        </span>-->
                     </div>
                 </div>
             </div>
