--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,6 +25,9 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
+                        <a href="http://www.breakingbamboo.com">Blog</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
                     <li class="page-scroll">
