--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,10 +9,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Obssessed with innovation, positive psych and cultures. Check out some of my communication platforms and web projects. I'm trying to create the world's first sustainable, content-driven charity.</p>
+                    <p>I simply love to iterate. Over and over, whether it's in my front-end engineering, web design, or my cooking.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>I'll occasionally run races, hike 14ers and dabble with machine learning</p>
+                    <p>I'm most passionate about the sacred medicine, Ayahuasca. I believe it's instrumental in raising the whole of human conciousness... A leap forward in making our world Heaven on Earth. Read about my first Ayahuasca experience <a>here</a>.</p>
+                    <p>I believe Human Compassion is the meaning of life, so please don't hesitate to ask what I can do for YOU!</p>
                 </div>
             </div>
         </div>
