--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -2,13 +2,27 @@
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
         <div class="container">
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Portfolio</h2>
                     <hr class="star-primary">
                 </div>
-            </div>
+            </div>-->
+
             <div class="row">
+                <h5>Live Work</h5>
+                <ul>
+                    <li><a href="http://www.mercurycsc.com/">MercuryCSC</a></li>
+                    <li><a href="http://trosainc.org/">TROSA</a></li>
+                    <li><a href="http://45.55.34.237/">AlphaJuice</a></li>
+                    <li><a href="https://rpiyumyum.herokuapp.com/">YumYum</a></li>
+                </ul>
+
+
+            </div>
+
+            <div class="row">
+                <h5>Other Projects</h5>
                 {% for post in site.posts %}
                     <div class="col-sm-4 portfolio-item">
                         <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
