--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <p>I simply love to iterate. Over and over, whether it's in my front-end engineering, web design, or my cooking.</p>
-                     <p>I'm most passionate about the sacred medicine, Ayahuasca. I believe it's instrumental in raising the whole of human conciousness... A leap forward in making our world Heaven on Earth. Read about my first Ayahuasca experience <a>here</a>.</p>
+                     <p>I'm most passionate about the sacred medicine, Ayahuasca. I believe it's instrumental in raising the whole of human conciousness... A leap forward in making our world Heaven on Earth.</p>
                     <p>I believe Human Compassion is the meaning of life, so please don't hesitate to ask what I can do for YOU!</p>
                 </div>
             </div>
