--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -107,7 +107,7 @@ header {
     background: url("/img/bnwlima.jpg");
     background-size:cover;
     background-position: center bottom;
-    min-height:80vh;
+    min-height:100vh;
 }
 
 header .container {
@@ -122,10 +122,16 @@ header img {
 
 header .intro-text .name {
     display: block;
-    text-transform: uppercase;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 2em;
-    font-weight: 700;
+    font-size: 2em !important;
+    font-weight: 400;
+    color:black;
+}
+header .intro-text .agedescription {
+    display:block;
+    font-family:"Helvetica Neue";
+    color:black;
+    font-weight: 400;
 }
 
 header .intro-text .skills {
