--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-    <!-- Footer -->
+    <!-- Footer 
     <footer class="text-center">
         <div class="footer-above">
             <div class="container">
@@ -30,9 +30,11 @@
         </div>
     </footer>
 
-    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+    
     <div class="scroll-top page-scroll visible-xs visible-sm">
         <a class="btn btn-primary" href="#page-top">
             <i class="fa fa-chevron-up"></i>
         </a>
     </div>
+    -->
+    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
