--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -1,7 +1,9 @@
 
-    <!-- Portfolio Grid Section -->
+    <!-- Portfolio Grid Section 
     <section id="portfolio">
         <div class="container">
+
+    -->        
             <!--<div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Portfolio</h2>
@@ -9,6 +11,7 @@
                 </div>
             </div>-->
 
+    <!--
             <div class="row">
                 {% for post in site.posts %}
                     <div class="col-sm-4 portfolio-item">
@@ -25,3 +28,4 @@
             </div>
         </div>
     </section>
+    -->
